# CKRasterizer

./: .clang-format  .gitignore  .gitmodules  CKRasterizer.sln  CMakeLists.txt  CMakeSettings.json  COPYING  LICENSE  README.md  ballanceproj.props
.github/: trigger
.github/workflows/: dx11.yml  dx12.yml  dx9.yml  gl.yml  rasterizer.yml  vk.yml
CKDX11Rasterizer/: CKDX11ConstantBufferDesc.cpp  CKDX11IndexBufferDesc.cpp  CKDX11PixelShaderDesc.cpp  CKDX11Rasterizer.cpp  CKDX11Rasterizer.h  CKDX11RasterizerCommon.h  CKDX11RasterizerContext.cpp  CKDX11RasterizerDebugControl.cpp  CKDX11RasterizerDriver.cpp  CKDX11RasterizerPlugin.cpp  CKDX11TextureDesc.cpp  CKDX11TextureFilter.cpp  CKDX11TextureFilter.h  CKDX11VertexBufferDesc.cpp  CKDX11VertexShaderDesc.cpp  CMakeLists.txt  Common.hlsl  EnumMaps.h  PShader.hlsl  PShaderDepth.hlsl  VShader0x102.hlsl  VShader0x142.hlsl  VShader0x1c4.hlsl  VShader0x42.hlsl  VShader2D.hlsl  VShader2DColor1.hlsl  VShader2DColor2.hlsl  VShaderColor.hlsl  VShaderColor1Tex1.hlsl  VShaderColor1Tex2.hlsl  VShaderColor2Tex1.hlsl  VShaderColor2Tex2.hlsl  VShaderColorTex.hlsl  VShaderDepth.hlsl  VShaderNormal.hlsl  VShaderNormalTex.hlsl  VShaderNormalTex1.hlsl  VShaderNormalTex2.hlsl  VShaderSpec.hlsl  VShaderTex.hlsl
CKDX12Rasterizer/: CKDX12Buffer.cpp  CKDX12ConstantBufferDesc.cpp  CKDX12DescriptorHeap.cpp  CKDX12DescriptorHeap.h  CKDX12DescriptorRing.cpp  CKDX12DescriptorRing.h  CKDX12DynamicDescriptorHeap.cpp  CKDX12DynamicDescriptorHeap.h  CKDX12DynamicUploadHeap.cpp  CKDX12DynamicUploadHeap.h  CKDX12IndexBufferDesc.cpp  CKDX12Rasterizer.cpp  CKDX12Rasterizer.h  CKDX12RasterizerCommon.h  CKDX12RasterizerContext.cpp  CKDX12RasterizerDriver.cpp  CKDX12RingBuffer.cpp  CKDX12RingBuffer.h  CKDX12RingBufferBase.cpp  CKDX12RingBufferBase.h  CKDX12TextureFilter.cpp  CKDX12TextureFilter.h  CKDX12UploadHeapComplex.cpp  CKDX12UploadHeapComplex.h  CKDX12VertexBufferDesc.cpp  CMakeLists.txt  Common.hlsl  EnumMaps.cpp  PShaderSimple.hlsl  VShader2DColor1.hlsl  VShader2DColor2.hlsl  VShaderColor.hlsl  VShaderColor2Tex1.hlsl  VShaderColor2Tex2.hlsl  VShaderNormalTex1.hlsl  VShaderNormalTex2.hlsl  VShaderTex.hlsl
CKDX9Rasterizer/: CKD3DX9.h  CKDX9PixelFormatUtils.cpp  CKDX9PixelShaderDesc.cpp  CKDX9Rasterizer.cpp  CKDX9Rasterizer.h  CKDX9Rasterizer.vcxproj  CKDX9Rasterizer.vcxproj.filters  CKDX9RasterizerContext.cpp  CKDX9RasterizerDriver.cpp  CKDX9VertexShaderDesc.cpp  CKDXRasterizerPlugin.cpp  CMakeLists.txt  common_include.h  cpp.hint
CKDX9Rasterizer/sep/: CKDX9IndexBufferDesc.h  CKDX9RasterizerContext.h  CKDX9RasterizerDriver.h  CKDX9Rasterizer_sep.h  CKDX9SytemInfo.h  CKDX9VertexBufferDesc.h
CKGLRasterizer/: CKGLIndexBuffer.cpp  CKGLIndexBuffer.h  CKGLIndexBufferDesc.cpp  CKGLPixelShader.cpp  CKGLPostProcessing.cpp  CKGLPostProcessing.h  CKGLProgram.cpp  CKGLProgram.h  CKGLRasterizer.cpp  CKGLRasterizer.h  CKGLRasterizer.vcxproj  CKGLRasterizer.vcxproj.filters  CKGLRasterizerCommon.h  CKGLRasterizerContext.cpp  CKGLRasterizerDebugControl.cpp  CKGLRasterizerDriver.cpp  CKGLRasterizerPlugin.cpp  CKGLTexture.cpp  CKGLTexture.h  CKGLUniformValue.cpp  CKGLUniformValue.h  CKGLVertexBuffer.cpp  CKGLVertexBuffer.h  CKGLVertexShader.cpp  CKGlContext.cpp  CKGlContext.h  CKGlSystemInfo.cpp  CKGlSystemInfo.h  CMakeLists.txt  EnumMaps.cpp  EnumMaps.h  ResourceManagement.cpp  frag.glsl  shaders.rc  vert.glsl
CKGLRasterizer/post/: altitudinemvideo.glsl  altitudinemvideo.pipeline  blobfilter.glsl  blobfilter.pipeline  blur.pipeline  conv.glsl  crt.glsl  crt.pipeline  crt_lite.glsl  crt_lite.pipeline  default.glsl  default.pipeline  edgedetect.glsl  edgedetect.pipeline  edgedetect2.pipeline  edgeenh.glsl  edgeenh.pipeline  gaussian.glsl  maxfilter.glsl  mblur.glsl  mblur.pipeline  mouse.glsl  mouse.pipeline  normalvideo.glsl  normalvideo.pipeline  redwave.glsl  sketchy.glsl  sketchy.pipeline  vs.glsl  yflip.glsl  yflip.pipeline
CKVkRasterizer/: CKVkBuffer.h  CKVkIndexBuffer.cpp  CKVkIndexBuffer.h  CKVkPipelineBuilder.cpp  CKVkPipelineBuilder.h  CKVkPipelineState.cpp  CKVkPipelineState.h  CKVkRasterizer.cpp  CKVkRasterizer.h  CKVkRasterizerCommon.h  CKVkRasterizerContext.cpp  CKVkRasterizerDriver.cpp  CKVkSampler.cpp  CKVkSampler.h  CKVkTexture.cpp  CKVkTexture.h  CKVkVertexBuffer.cpp  CKVkVertexBuffer.h  CMakeLists.txt  CkVkBuffer.cpp  ManagedVulkanPipeline.cpp  ManagedVulkanPipeline.h  ResourceManagement.cpp  ResourceManagement.h  VkPipelineBuilder.cpp  VkPipelineBuilder.h  VulkanUtils.cpp  VulkanUtils.h  default.frag  default.vert  glslang.conf  shaders.rc.in
buildsystems/cmake/: FindDirectX11.cmake  FindDirectX12.cmake  FindDirectX9.cmake
